fix mobile horizontal scrolling

--- a/src/components/DefaultLayout/layout.module.css
+++ b/src/components/DefaultLayout/layout.module.css
@@ -1,5 +1,5 @@
 .layout {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
 }
